--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
                 </div>
 
                 <div class="infos">
-                    <form class="form" id="form">
-                        <input type="text" class="campo texto-do-campo " placeholder="Nome completo *">
+                    <form class="form" id="form" method="post">
+                        <input type="text" class="campo texto-do-campo  " placeholder="Nome completo *">
                         <span class="alerta">campo obrigatório</span>
 
                         <input type="email" class="campo texto-do-campo " placeholder="Email *">
                         <span class="alerta">campo obrigatório</span>
 
-                        <input type="tel" class="campo texto-do-campo " placeholder="(_ _) _  _ _ _ _ - _ _ _ _ *">
+                        <input type="number" class="campo texto-do-campo  " placeholder="(_ _) _  _ _ _ _ - _ _ _ _ *">
                         <span class="alerta">campo obrigatório</span> 
 
                         <input type="text" class="campo texto-do-campo mensagem " placeholder="Mensagem *">
